# Text2SQL

./: .gitignore  README.md  pyproject.toml  setup.py  simple_test.py  test_config.py  test_pipeline.py
natural_language_to_sql/: __init__.py
natural_language_to_sql/cli/: __init__.py  main.py
natural_language_to_sql/core/: __init__.py  nsql_agent.py  rag_system.py
natural_language_to_sql/models/: __init__.py  gemini_llm.py
natural_language_to_sql/utils/: __init__.py  config_manager.py  helpers.py
test_db/: description.json
